[gd_scene load_steps=3 format=3 uid="uid://uj4x60wtht"]

[ext_resource type="Script" path="res://Templates/MenuTemplates/Scripts/main_menu_controller.gd" id="1_2ebsf"]
[ext_resource type="PackedScene" uid="uid://bq2tj56y0o0y2" path="res://Templates/MenuTemplates/Scenes/options_menu.tscn" id="2_5llu1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ebsf")

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -117.5
offset_top = 67.0
offset_right = 117.5
offset_bottom = 328.0
grow_horizontal = 2
theme_override_constants/separation = 15
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="Content"]
offset_right = 350.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 45
text = "Game Title"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
offset_top = 81.0
offset_right = 350.0
offset_bottom = 101.0

[node name="StartGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
offset_top = 116.0
offset_right = 350.0
offset_bottom = 166.0
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="OptionsButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
offset_top = 181.0
offset_right = 350.0
offset_bottom = 231.0
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../StartGameButton")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
offset_top = 246.0
offset_right = 350.0
offset_bottom = 296.0
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../OptionsButton")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_5llu1")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="Content/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="open_options"]
[connection signal="pressed" from="Content/QuitButton" to="." method="quit"]
[connection signal="close" from="OptionsMenu" to="." method="close_options"]
